--- a/styles/style.css
+++ b/styles/style.css
@@ -244,5 +244,60 @@
         font-size: 18px;
     }
 }
+/* other cards */
 
+#other-cards{
+    margin-top: 30px;
+}
+#other-cards .card{
+    background-color: black;
+}
+#other-cards .card h3{
+    margin-top: 30px;
+    color: black;
+    margin-left: 10px;
+    letter-spacing: 3px;
+}
+#other-cards .card h5{
+    margin-top: 15px;
+    font-weight: 100;
+    font-size: 18px;
+    color: black;
+    margin-left: 10px;
+    border-bottom: 2px solid black;
+    width: 200px;
+}
+#other-cards .cards p{
+    margin-top: 10px;
+    font-weight: 100;
+    font-size: 10px;
+    color: black;
+    margin-left: 10px;
+    letter-spacing: 1px;
+}
+#shopnow{
+    width: 130px;
+    height: 30px;
+    margin-top: 10px;
+    letter-spacing: 3px;
+    color: white;
+    background-color: black;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+}
+@media screen and (max-width: 1000px) {
+    #other-cards .card h3{
+        margin-top: 5px;
+        font-size: 20px;
+    }
+    #other-cards .card h5{
+        margin-top: 5px;
+        font-size: 15px;
+    }
+    #other-cards .cards p{
+        margin-top: 0;
+    }
+    
+}
 /* product cards */
