--- a/styles/style.css
+++ b/styles/style.css
@@ -305,10 +305,25 @@
         font-size: 16px;
     }
 }
-#root{
-    width: 60%;
-    display: flex;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+button#adm{
+    width: 150px;
+    height: 32px;
+    letter-spacing: 3px;
+    color: black;
+    background-color: green;
+    border-radius: 5px;
+    border: none;
+    transition: 0.2s ease;
+    cursor: pointer;
 }
-/* product cards */
+button#add{
+    width: 150px;
+    height: 32px;
+    letter-spacing: 3px;
+    color: black;
+    background-color: red;
+    border-radius: 5px;
+    border: none;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
